[gd_scene load_steps=106 format=2]

[ext_resource path="res://Character/Steve.gd" type="Script" id=1]
[ext_resource path="res://Character/Sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://ANIMATION/idle.tres" type="Animation" id=3]
[ext_resource path="res://assets/map/jianglinxi/8997-1.png" type="Texture" id=4]
[ext_resource path="res://assets/map/jianglinxi/10460-1.png" type="Texture" id=5]
[ext_resource path="res://EFECTIVE/js/digit/435-1.png" type="Texture" id=6]
[ext_resource path="res://EFECTIVE/js/digit/437-1.png" type="Texture" id=7]
[ext_resource path="res://EFECTIVE/js/2/232-1.png" type="Texture" id=8]
[ext_resource path="res://EFECTIVE/level_up/446-1.png" type="Texture" id=9]
[ext_resource path="res://EFECTIVE/level_up/446-2.png" type="Texture" id=10]
[ext_resource path="res://EFECTIVE/js/2/232-3.png" type="Texture" id=11]
[ext_resource path="res://EFECTIVE/js/2/232-4.png" type="Texture" id=12]
[ext_resource path="res://EFECTIVE/js/2/232-5.png" type="Texture" id=13]
[ext_resource path="res://EFECTIVE/level_up/446-6.png" type="Texture" id=14]
[ext_resource path="res://EFECTIVE/level_up/446-5.png" type="Texture" id=15]
[ext_resource path="res://EFECTIVE/level_up/446-7.png" type="Texture" id=16]
[ext_resource path="res://EFECTIVE/level_up/446-3.png" type="Texture" id=17]
[ext_resource path="res://EFECTIVE/level_up/446-4.png" type="Texture" id=18]
[ext_resource path="res://EFECTIVE/level_up/446-11.png" type="Texture" id=19]
[ext_resource path="res://EFECTIVE/level_up/446-13.png" type="Texture" id=20]
[ext_resource path="res://EFECTIVE/level_up/446-8.png" type="Texture" id=21]
[ext_resource path="res://EFECTIVE/level_up/446-12.png" type="Texture" id=22]
[ext_resource path="res://EFECTIVE/level_up/446-9.png" type="Texture" id=23]
[ext_resource path="res://EFECTIVE/level_up/446-14.png" type="Texture" id=24]
[ext_resource path="res://EFECTIVE/level_up/446-10.png" type="Texture" id=25]
[ext_resource path="res://EFECTIVE/level_up/446-15.png" type="Texture" id=26]
[ext_resource path="res://EFECTIVE/level_up/9001.wav" type="AudioStream" id=27]
[ext_resource path="res://EFECTIVE/js/digit/454-1.png" type="Texture" id=28]
[ext_resource path="res://ANIMATION/fly.tres" type="SpriteFrames" id=29]
[ext_resource path="res://ANIMATION/attack2.tres" type="Animation" id=30]
[ext_resource path="res://EFECTIVE/state/187-1.png" type="Texture" id=31]
[ext_resource path="res://EFECTIVE/state/187-3.png" type="Texture" id=32]
[ext_resource path="res://EFECTIVE/state/187-2.png" type="Texture" id=33]
[ext_resource path="res://EFECTIVE/state/187-4.png" type="Texture" id=34]
[ext_resource path="res://EFECTIVE/state/187-13.png" type="Texture" id=35]
[ext_resource path="res://EFECTIVE/state/187-14.png" type="Texture" id=36]
[ext_resource path="res://EFECTIVE/state/187-15.png" type="Texture" id=37]
[ext_resource path="res://EFECTIVE/state/187-5.png" type="Texture" id=38]
[ext_resource path="res://EFECTIVE/js/306-9.png" type="Texture" id=39]
[ext_resource path="res://EFECTIVE/state/187-7.png" type="Texture" id=40]
[ext_resource path="res://EFECTIVE/js/306-4.png" type="Texture" id=41]
[ext_resource path="res://EFECTIVE/state/187-8.png" type="Texture" id=42]
[ext_resource path="res://EFECTIVE/state/187-9.png" type="Texture" id=43]
[ext_resource path="res://EFECTIVE/state/187-10.png" type="Texture" id=44]
[ext_resource path="res://EFECTIVE/state/187-6.png" type="Texture" id=45]
[ext_resource path="res://EFECTIVE/js/306-5.png" type="Texture" id=46]
[ext_resource path="res://EFECTIVE/state/187-11.png" type="Texture" id=47]
[ext_resource path="res://FCTmgr.tscn" type="PackedScene" id=48]
[ext_resource path="res://EFECTIVE/js/306-10.png" type="Texture" id=49]
[ext_resource path="res://EFECTIVE/js/306-3.png" type="Texture" id=50]
[ext_resource path="res://EFECTIVE/state/187-12.png" type="Texture" id=51]
[ext_resource path="res://EFECTIVE/js/306-7.png" type="Texture" id=52]
[ext_resource path="res://EFECTIVE/js/306-2.png" type="Texture" id=53]
[ext_resource path="res://EFECTIVE/js/306-6.png" type="Texture" id=56]
[ext_resource path="res://EFECTIVE/js/306-1.png" type="Texture" id=57]
[ext_resource path="res://EFECTIVE/js/306-8.png" type="Texture" id=59]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=67]

[sub_resource type="AnimationNodeAnimation" id=1]
animation = "attackLeft"

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "attackRight"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "clim"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "injury"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=26]
resource_local_to_scene = true
states/attackLeft/node = SubResource( 1 )
states/attackLeft/position = Vector2( -274, 55 )
states/attackRight/node = SubResource( 2 )
states/attackRight/position = Vector2( -274, 206 )
states/clim/node = SubResource( 3 )
states/clim/position = Vector2( 710, 39 )
states/die/node = SubResource( 4 )
states/die/position = Vector2( 407, -15 )
states/idle/node = SubResource( 5 )
states/idle/position = Vector2( 266, 62 )
states/injury/node = SubResource( 6 )
states/injury/position = Vector2( 124.96, -32.32 )
states/jump/node = SubResource( 7 )
states/jump/position = Vector2( 525, 192 )
states/run/node = SubResource( 8 )
states/run/position = Vector2( 252, 212 )
transitions = [ "idle", "run", SubResource( 9 ), "run", "idle", SubResource( 10 ), "idle", "attackLeft", SubResource( 11 ), "attackLeft", "idle", SubResource( 12 ), "idle", "jump", SubResource( 13 ), "jump", "idle", SubResource( 14 ), "jump", "clim", SubResource( 15 ), "clim", "jump", SubResource( 16 ), "idle", "clim", SubResource( 17 ), "clim", "idle", SubResource( 18 ), "idle", "die", SubResource( 19 ), "run", "attackLeft", SubResource( 20 ), "run", "attackRight", SubResource( 21 ), "idle", "attackRight", SubResource( 22 ), "attackRight", "idle", SubResource( 23 ), "idle", "injury", SubResource( 24 ), "injury", "idle", SubResource( 25 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( -331.198, -82.9 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=27]

[sub_resource type="Animation" id=28]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1.03527 ),
"update": 1,
"values": [ "attack" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -72, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimatedSprite2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimatedSprite2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -24, 10 ) ]
}

[sub_resource type="Animation" id=29]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "clim" ]
}

[sub_resource type="Animation" id=30]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}

[sub_resource type="Animation" id=31]
resource_name = "experience"
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -27.5, -7.5 ), Vector2( -27.5, -80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=32]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "injury" ]
}

[sub_resource type="Animation" id=33]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}

[sub_resource type="Animation" id=34]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}

[sub_resource type="Animation" id=35]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "yinyuejianwu" ]
}

[sub_resource type="Shader" id=36]
code = "shader_type canvas_item;

uniform float width:hint_range(0.0,30.0);
uniform vec4 outline_color:hint_color;

void fragment(){
    float size = width * 1.0 / float(textureSize(TEXTURE,0).x);
    vec4 sprite_color = texture(TEXTURE,UV);
    float alpha = -8.0 * sprite_color.a;
    alpha += texture(TEXTURE,UV + vec2(0.0,-size)).a;
    alpha += texture(TEXTURE,UV + vec2(size,-size)).a;
    alpha += texture(TEXTURE,UV + vec2(size,0)).a;
    alpha += texture(TEXTURE,UV + vec2(size,size)).a;
    alpha += texture(TEXTURE,UV + vec2(0.0,size)).a;
    alpha += texture(TEXTURE,UV + vec2(-size,size)).a;
    alpha += texture(TEXTURE,UV + vec2(-size,0.0)).a;
    alpha += texture(TEXTURE,UV + vec2(-size,-size)).a;
    vec4 final_color = mix(sprite_color,outline_color,clamp(alpha,0.0,1.0));
    COLOR = vec4(final_color.rgb,clamp(abs(alpha) + sprite_color.a,0.0,1.0));
} "

[sub_resource type="ShaderMaterial" id=37]
shader = SubResource( 36 )
shader_param/width = 0.0
shader_param/outline_color = Color( 0.996078, 1, 0, 1 )

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 60, 40 )

[sub_resource type="CapsuleShape2D" id=39]
radius = 4.90596
height = 81.6411

[sub_resource type="CanvasItemMaterial" id=40]
blend_mode = 1

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "e2",
"speed": 14.0
} ]

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 48, 56 )

[sub_resource type="SpriteFrames" id=43]
animations = [ {
"frames": [ ExtResource( 57 ), ExtResource( 53 ), ExtResource( 50 ), ExtResource( 41 ), ExtResource( 46 ), ExtResource( 56 ), ExtResource( 52 ), ExtResource( 59 ), ExtResource( 39 ), ExtResource( 49 ) ],
"loop": true,
"name": "accmulate",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=44]
blend_mode = 1

[sub_resource type="SpriteFrames" id=45]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 14.0
} ]

[sub_resource type="CanvasItemMaterial" id=46]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=47]
blend_mode = 1

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 38 ), ExtResource( 45 ), ExtResource( 40 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 47 ), ExtResource( 51 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Steve" type="KinematicBody2D" groups=[
"Persist",
]]
script = ExtResource( 1 )
route = NodePath(".")

[node name="Camera2D" parent="." instance=ExtResource( 67 )]
drag_margin_h_enabled = false

[node name="jianglinxijiao" type="Sprite" parent="Camera2D"]
visible = false
z_index = -99
texture = ExtResource( 4 )

[node name="jianglinxijiao2" type="Sprite" parent="Camera2D"]
visible = false
position = Vector2( 152, -152 )
scale = Vector2( 0.5, 0.5 )
z_index = -99
texture = ExtResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 26 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attackLeft = SubResource( 28 )
anims/attackRight = ExtResource( 30 )
anims/clim = SubResource( 29 )
anims/die = SubResource( 30 )
anims/experience = SubResource( 31 )
anims/idle = ExtResource( 3 )
anims/injury = SubResource( 32 )
anims/jump = SubResource( 33 )
anims/run = SubResource( 34 )
anims/yinxuejianwu = SubResource( 35 )

[node name="Sprite" parent="." instance=ExtResource( 2 )]
material = SubResource( 37 )
frame = 2

[node name="HitBox" type="Area2D" parent="Sprite"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/HitBox"]
position = Vector2( 120, 10 )
shape = SubResource( 38 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 39 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 40 )
position = Vector2( 72, 0 )
scale = Vector2( 0.67, 1 )
frames = SubResource( 41 )
animation = "e2"
frame = 1
playing = true

[node name="Timer" type="Timer" parent="."]

[node name="FCTmgr" parent="." instance=ExtResource( 48 )]
position = Vector2( 8, -40 )

[node name="pickableArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickableArea"]
shape = SubResource( 42 )

[node name="self_heal" type="Timer" parent="."]
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = -27.5
margin_top = -80.0
margin_right = 141.5
margin_bottom = -40.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="TextureRect" parent="HBoxContainer"]
margin_right = 61.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="1" type="TextureRect" parent="HBoxContainer"]
margin_left = 62.0
margin_right = 73.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="2" type="TextureRect" parent="HBoxContainer"]
margin_left = 74.0
margin_right = 85.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="3" type="TextureRect" parent="HBoxContainer"]
margin_left = 86.0
margin_right = 97.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="4" type="TextureRect" parent="HBoxContainer"]
margin_left = 98.0
margin_right = 109.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="5" type="TextureRect" parent="HBoxContainer"]
margin_left = 110.0
margin_right = 121.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="6" type="TextureRect" parent="HBoxContainer"]
margin_left = 122.0
margin_right = 133.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="7" type="TextureRect" parent="HBoxContainer"]
margin_left = 134.0
margin_right = 145.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="8" type="TextureRect" parent="HBoxContainer"]
margin_left = 146.0
margin_right = 157.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="9" type="TextureRect" parent="HBoxContainer"]
margin_left = 158.0
margin_right = 169.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 24, 10 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 43 )
animation = "accmulate"
frame = 3
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 44 )
position = Vector2( 5.24408, 5.24408 )
frames = SubResource( 45 )
frame = 7

[node name="level_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
margin_left = -30.7013
margin_top = 56.0633
margin_right = 61.2987
margin_bottom = 79.0633
text = "Super赛亚宁"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed" type="Timer" parent="."]

[node name="health" type="Timer" parent="."]

[node name="magic" type="Timer" parent="."]

[node name="miss" type="Sprite" parent="."]
visible = false
position = Vector2( 5.88757, -91.6806 )
texture = ExtResource( 28 )

[node name="fly_left" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 46 )
position = Vector2( -32.1353, 48.686 )
scale = Vector2( 0.431948, 0.34901 )
frames = ExtResource( 29 )
frame = 4
playing = true

[node name="fly_right" type="AnimatedSprite" parent="."]
visible = false
material = SubResource( 46 )
position = Vector2( 42.9738, 48.6878 )
scale = Vector2( 0.431948, 0.34901 )
frames = ExtResource( 29 )
frame = 2
playing = true
flip_h = true

[node name="recover" type="AnimatedSprite" parent="."]
material = SubResource( 47 )
position = Vector2( 9.51367, 3.56763 )
frames = SubResource( 48 )
frame = 7
playing = true

[connection signal="health_updated" from="." to="." method="_on_Steve_health_updated"]
[connection signal="body_entered" from="Sprite/HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="pickableArea" to="." method="_on_pickableArea_body_entered"]
[connection signal="body_exited" from="pickableArea" to="." method="_on_pickableArea_body_exited"]
[connection signal="timeout" from="self_heal" to="." method="_on_self_heal_timeout"]
[connection signal="timeout" from="speed" to="." method="_on_speed_timeout"]
[connection signal="timeout" from="health" to="." method="_on_health_timeout"]
